# RoboSenpai

./: .gitignore  CMakeLists.txt  README.md  config.yml.example
RoboSenpai/: BotCore.cpp  BotCore.h  Channel.cpp  Channel.h  main.cpp
cmake/Modules/: Findpugixml.cmake  Findtidy.cmake
src/: BotCore.cpp  BotCore.h  CMakeLists.txt  Channel.cpp  Channel.h  CommandModule.cpp  CommandModule.h  Connection.cpp  Connection.h  Module.cpp  Module.h  Scraper.cpp  Scraper.h  SystemCommandModule.h  SystemCommandsProcessor.cpp  SystemCommandsProcessor.h  main.cpp
src/modules/: CMakeLists.txt
src/modules/pennyarcade/: CMakeLists.txt  PennyArcade.cpp  PennyArcade.h
