project (RoboSenpai)
cmake_minimum_required (VERSION 2.6)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

FIND_PACKAGE(gloox REQUIRED)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(YamlCpp REQUIRED)

INCLUDE_DIRECTORIES(${GLOOX_INCLUDE_DIR} ${YAMLCPP_INCLUDE_DIR} ${Boost_INCLUDE_DIR})

SET(LIBS ${LIBS} ${GLOOX_LIBRARIES} ${YAMLCPP_LIBRARY})

IF(MSVC)
	SET(CMAKE_CXX_FLAGS "-W4 -EHsc -D_SCL_SECURE_NO_WARNINGS")
ELSE()
	SET(CMAKE_CXX_FLAGS "-Wall -std=c++11")
ENDIF()

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.yml ${CMAKE_CURRENT_BINARY_DIR}/config.yml COPYONLY)

ADD_SUBDIRECTORY(src)
